[package]
name = "hello_gaming_tweak"
version = "0.1.0"
authors = ["Ziyan \"Jerry\" Chen <jerryc443@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "~0.2"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
